fix(i18n): Fix malformed JSON in translation files (literal \n characters)

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -11,7 +11,11 @@
   "plans": "Plans",
   "projects": "Projects",
   "courses": "Courses",
-  "contact": "Contact",\n  "social_networks": "Social Networks",\n  "newsletter": "Newsletter",\n  "newsletter_description": "Receive exclusive updates and content",\n  "your_email": "Your email",
+  "contact": "Contact",
+  "social_networks": "Social Networks",
+  "newsletter": "Newsletter",
+  "newsletter_description": "Receive exclusive updates and content",
+  "your_email": "Your email",
   "copyright": "© {{year}} Adventist Portal. All rights reserved.",
   "developed_by": "Developed with ❤️ by Wallison Pereira",
   "contact_form": "Contact Form",
