--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -11,7 +11,11 @@
   "plans": "Planes",
   "projects": "Proyectos",
   "courses": "Cursos",
-  "contact": "Contacto",\n  "social_networks": "Redes Sociales",\n  "newsletter": "Boletín",\n  "newsletter_description": "Reciba actualizaciones y contenido exclusivo",\n  "your_email": "Su correo electrónico",
+  "contact": "Contacto",
+  "social_networks": "Redes Sociales",
+  "newsletter": "Boletín",
+  "newsletter_description": "Reciba actualizaciones y contenido exclusivo",
+  "your_email": "Su correo electrónico",
   "copyright": "© {{year}} Portal Adventista. Todos los derechos reservados.",
   "developed_by": "Desarrollado con ❤️ por Wallison Pereira",
   "contact_form": "Formulario de Contacto",
