--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -11,7 +11,11 @@
   "plans": "Planos",
   "projects": "Projetos",
   "courses": "Cursos",
-  "contact": "Contato",\n  "social_networks": "Redes Sociais",\n  "newsletter": "Newsletter",\n  "newsletter_description": "Receba atualizações e conteúdos exclusivos",\n  "your_email": "Seu e-mail",
+  "contact": "Contato",
+  "social_networks": "Redes Sociais",
+  "newsletter": "Newsletter",
+  "newsletter_description": "Receba atualizações e conteúdos exclusivos",
+  "your_email": "Seu e-mail",
   "copyright": "© {{year}} Portal Adventista. Todos os direitos reservados.",
   "developed_by": "Desenvolvido com ❤️ por Wallison Pereira",
   "contact_form": "Formulário de Contato",
